feat: documentation and correct handling errors
TODO: implement auth middleware to gym routes with distinction
